Fixing spacing

--- a/style.css
+++ b/style.css
@@ -14,27 +14,27 @@ font: inherit;
 header {
   background: white url("headerItem.PNG") top left no-repeat;
   background-size: 100% 100%;
-  padding: 0 0 50px 0;
+  padding: 0 0 0 0;
 }
 
+.main {
+    margin: 0 0 0 250px;
+ }
+
 .disclaimer {
-	margin: 0 0 0 150px;
+	margin: 5px 0 0 0px;
 }
 
 .disclaimer li {
 	display: inline-flex;
 	list-style-type: none;
-	padding-left: 0;
+	padding: 0 30px 0 0;
 	margin: 0;
 }
 
 .printRight {
 	text-align: right;
 }
-
-.main {
-    margin: 0 0 0 150px;
- }
 
 h1 {
 	font-weight: bold;
